Implement the functionality required to support sorting in bfp GiST indices

--- a/Code/PgSQL/rdkit/CMakeLists.txt
+++ b/Code/PgSQL/rdkit/CMakeLists.txt
@@ -237,11 +237,18 @@ if(MSVC)
     set(PG_RDKIT_LIB_SRC "${CMAKE_BUILD_TYPE}\\${PG_RDKIT_LIB_SRC}")
   endif(${CMAKE_GENERATOR} STREQUAL "NMake Makefiles")
 endif(MSVC)
+
 if(${PostgreSQL_VERSION_STRING} VERSION_LESS 9.5)
     set(RDKIT_PG_BFP_GIST_FETCH "")
 else(${PostgreSQL_VERSION_STRING} VERSION_LESS 9.5)
     set(RDKIT_PG_BFP_GIST_FETCH "FUNCTION    9   gbfp_fetch (internal),")
 endif(${PostgreSQL_VERSION_STRING} VERSION_LESS 9.5)
+
+if(${PostgreSQL_VERSION_STRING} VERSION_LESS 14.0)
+    set(RDKIT_PG_BFP_GIST_SORTSUPPORT "")
+else(${PostgreSQL_VERSION_STRING} VERSION_LESS 14.0)
+    set(RDKIT_PG_BFP_GIST_SORTSUPPORT "FUNCTION    11   gbfp_sortsupport (internal),")
+endif(${PostgreSQL_VERSION_STRING} VERSION_LESS 14.0)
 
 if(${PostgreSQL_VERSION_STRING} VERSION_LESS 9.3)
   set(RDKIT_RDK_GIN_BFP_TRICONSISTENT "")
