add sort support to mol and qmol gist indices

--- a/Code/PgSQL/rdkit/CMakeLists.txt
+++ b/Code/PgSQL/rdkit/CMakeLists.txt
@@ -252,8 +252,12 @@ else(${PostgreSQL_VERSION_STRING} VERSION_LESS 9.5)
 endif(${PostgreSQL_VERSION_STRING} VERSION_LESS 9.5)
 
 if(${PostgreSQL_VERSION_STRING} VERSION_LESS 14.0)
+    set(RDKIT_PG_MOL_GIST_SORTSUPPORT "")
+    set(RDKIT_PG_QMOL_GIST_SORTSUPPORT "")
     set(RDKIT_PG_BFP_GIST_SORTSUPPORT "")
 else(${PostgreSQL_VERSION_STRING} VERSION_LESS 14.0)
+    set(RDKIT_PG_MOL_GIST_SORTSUPPORT "FUNCTION    11   gmol_sortsupport (internal),")
+    set(RDKIT_PG_QMOL_GIST_SORTSUPPORT "FUNCTION    11   gmol_sortsupport (internal),")
     set(RDKIT_PG_BFP_GIST_SORTSUPPORT "FUNCTION    11   gbfp_sortsupport (internal),")
 endif(${PostgreSQL_VERSION_STRING} VERSION_LESS 14.0)
 
