--- a/Code/PgSQL/rdkit/rdkit.sql.in
+++ b/Code/PgSQL/rdkit/rdkit.sql.in
@@ -1664,6 +1664,10 @@ CREATE OR REPLACE FUNCTION gmol_same(bytea, bytea, internal)
     AS 'MODULE_PATHNAME'
     LANGUAGE C IMMUTABLE;
 
+CREATE OR REPLACE FUNCTION gmol_sortsupport(internal)
+    RETURNS void
+    AS 'MODULE_PATHNAME'
+    LANGUAGE C STRICT;
 
 -- Support functions for bfp gist
 
@@ -1798,6 +1802,7 @@ AS
     FUNCTION    5   gmol_penalty (internal, internal, internal),
     FUNCTION    6   gmol_picksplit (internal, internal),
     FUNCTION    7   gmol_same (bytea, bytea, internal),
+    @RDKIT_PG_MOL_GIST_SORTSUPPORT@
 STORAGE         bytea;
 
 CREATE OPERATOR CLASS gist_qmol_ops
@@ -1815,6 +1820,7 @@ AS
     FUNCTION    5   gmol_penalty (internal, internal, internal),
     FUNCTION    6   gmol_picksplit (internal, internal),
     FUNCTION    7   gmol_same (bytea, bytea, internal),
+    @RDKIT_PG_QMOL_GIST_SORTSUPPORT@
 STORAGE         bytea;
 
 CREATE OPERATOR CLASS gist_bfp_ops
