--- a/Code/PgSQL/rdkit/update_sql/rdkit--4.3.0--4.3.1.sql.in
+++ b/Code/PgSQL/rdkit/update_sql/rdkit--4.3.0--4.3.1.sql.in
@@ -1,7 +1,52 @@
+CREATE OR REPLACE FUNCTION gmol_sortsupport(internal)
+    RETURNS void
+    AS 'MODULE_PATHNAME'
+    LANGUAGE C STRICT;
+
 CREATE OR REPLACE FUNCTION gbfp_sortsupport(internal)
     RETURNS void
     AS 'MODULE_PATHNAME'
     LANGUAGE C STRICT;
+
+DROP OPERATOR CLASS IF EXISTS gist_mol_ops USING gist;
+
+CREATE OPERATOR CLASS gist_mol_ops
+DEFAULT FOR TYPE mol USING gist
+AS
+    OPERATOR    3   @> (mol, mol),
+    OPERATOR    4   <@ (mol, mol),
+    OPERATOR    3   @> (mol, qmol),
+    OPERATOR    4   <@ (qmol, mol),
+    OPERATOR    6   @= (mol, mol),
+    FUNCTION    1   gmol_consistent (bytea, internal, int4),
+    FUNCTION    2   gmol_union (bytea, internal),
+    FUNCTION    3   gmol_compress (internal),
+    FUNCTION    4   gmol_decompress (internal),
+    FUNCTION    5   gmol_penalty (internal, internal, internal),
+    FUNCTION    6   gmol_picksplit (internal, internal),
+    FUNCTION    7   gmol_same (bytea, bytea, internal),
+    @RDKIT_PG_MOL_GIST_SORTSUPPORT@
+STORAGE         bytea;
+
+DROP OPERATOR CLASS IF EXISTS gist_qmol_ops USING gist;
+
+CREATE OPERATOR CLASS gist_qmol_ops
+DEFAULT FOR TYPE qmol USING gist
+AS
+    OPERATOR    3   @> (mol, mol),
+    OPERATOR    4   <@ (mol, mol),
+    OPERATOR    3   @> (mol, qmol),
+    OPERATOR    4   <@ (qmol, mol),
+    OPERATOR    6   @= (mol, mol),
+    FUNCTION    1   gmol_consistent (bytea, internal, int4),
+    FUNCTION    2   gmol_union (bytea, internal),
+    FUNCTION    3   gmol_compress (internal),
+    FUNCTION    4   gmol_decompress (internal),
+    FUNCTION    5   gmol_penalty (internal, internal, internal),
+    FUNCTION    6   gmol_picksplit (internal, internal),
+    FUNCTION    7   gmol_same (bytea, bytea, internal),
+    @RDKIT_PG_QMOL_GIST_SORTSUPPORT@
+STORAGE         bytea;
 
 DROP OPERATOR CLASS IF EXISTS gist_bfp_ops USING gist;
 
