--- a/Code/PgSQL/rdkit/CMakeLists.txt
+++ b/Code/PgSQL/rdkit/CMakeLists.txt
@@ -251,15 +251,23 @@ else(${PostgreSQL_VERSION_STRING} VERSION_LESS 9.5)
     set(RDKIT_PG_BFP_GIST_FETCH "FUNCTION    9   gbfp_fetch (internal),")
 endif(${PostgreSQL_VERSION_STRING} VERSION_LESS 9.5)
 
-if(${PostgreSQL_VERSION_STRING} VERSION_LESS 14.0)
-    set(RDKIT_PG_MOL_GIST_SORTSUPPORT "")
-    set(RDKIT_PG_QMOL_GIST_SORTSUPPORT "")
-    set(RDKIT_PG_BFP_GIST_SORTSUPPORT "")
-else(${PostgreSQL_VERSION_STRING} VERSION_LESS 14.0)
-    set(RDKIT_PG_MOL_GIST_SORTSUPPORT "FUNCTION    11   gmol_sortsupport (internal),")
-    set(RDKIT_PG_QMOL_GIST_SORTSUPPORT "FUNCTION    11   gmol_sortsupport (internal),")
-    set(RDKIT_PG_BFP_GIST_SORTSUPPORT "FUNCTION    11   gbfp_sortsupport (internal),")
-endif(${PostgreSQL_VERSION_STRING} VERSION_LESS 14.0)
+if(RDK_PGSQL_MOL_GIST_SORTSUPPORT AND ${PostgreSQL_VERSION_STRING} VERSION_GREATER_EQUAL 14.0)
+  set(RDKIT_PG_MOL_GIST_SORTSUPPORT "FUNCTION    11   gmol_sortsupport (internal),")
+else()
+  set(RDKIT_PG_MOL_GIST_SORTSUPPORT "")
+endif()
+
+if(RDK_PGSQL_QMOL_GIST_SORTSUPPORT AND ${PostgreSQL_VERSION_STRING} VERSION_GREATER_EQUAL 14.0)
+  set(RDKIT_PG_QMOL_GIST_SORTSUPPORT "FUNCTION    11   gmol_sortsupport (internal),")
+else()
+  set(RDKIT_PG_QMOL_GIST_SORTSUPPORT "")
+endif()
+
+if(RDK_PGSQL_BFP_GIST_SORTSUPPORT AND ${PostgreSQL_VERSION_STRING} VERSION_GREATER_EQUAL 14.0)
+  set(RDKIT_PG_BFP_GIST_SORTSUPPORT "FUNCTION    11   gbfp_sortsupport (internal),")
+else()
+  set(RDKIT_PG_BFP_GIST_SORTSUPPORT "")
+endif()
 
 if(${PostgreSQL_VERSION_STRING} VERSION_LESS 9.3)
   set(RDKIT_RDK_GIN_BFP_TRICONSISTENT "")
