--- a/Code/GraphMol/Fingerprints/Wrap/CMakeLists.txt
+++ b/Code/GraphMol/Fingerprints/Wrap/CMakeLists.txt
@@ -8,5 +8,11 @@ rdkit_python_extension(rdMHFPFingerprint
                        DEST Chem
                        LINK_LIBRARIES Fingerprints )
 
+rdkit_python_extension(rdMinhash
+                       MinhashWrapper.cpp
+                       DEST Chem
+                       LINK_LIBRARIES Fingerprints )
+
 add_pytest(pyTestGenerator ${CMAKE_CURRENT_SOURCE_DIR}/testGenerators.py)
 add_pytest(pyTestMHFP ${CMAKE_CURRENT_SOURCE_DIR}/testMHFP.py)
+add_pytest(pyTestMinhash ${CMAKE_CURRENT_SOURCE_DIR}/testMinhash.py)
