--- a/Code/JavaWrappers/gmwrapper/CMakeLists.txt
+++ b/Code/JavaWrappers/gmwrapper/CMakeLists.txt
@@ -400,7 +400,7 @@ ADD_TEST(JavaBitOpsTests
 		-cp "${JUNIT_JAR}${PATH_SEP}${CMAKE_JAVA_TEST_OUTDIR}${PATH_SEP}${CMAKE_CURRENT_SOURCE_DIR}/org.RDKit.jar"
 		org.RDKit.BitOpsTests)
 
-ADD_TEST(MolStandardizeTest
+ADD_TEST(JavaMolStandardizeTest
     java -Djava.library.path=${CMAKE_CURRENT_SOURCE_DIR}
     -cp "${JUNIT_JAR}${PATH_SEP}${CMAKE_JAVA_TEST_OUTDIR}${PATH_SEP}${CMAKE_CURRENT_SOURCE_DIR}/org.RDKit.jar"
     org.RDKit.MolStandardizeTest)
